--- a/app/src/main/res/layout/fragment_edit_library.xml
+++ b/app/src/main/res/layout/fragment_edit_library.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@xml/sound_background"
     android:overScrollMode="never"
-    tools:context=".LibraryFragment">
+    tools:context=".LibraryEditFragment">
 
     <TextView
         android:layout_width="187dp"
@@ -34,16 +34,18 @@
         android:textAppearance="@style/home"
         android:textColor="#1B325F"
         android:textStyle="bold" />
-    <!--app:drawableLeftCompat="@drawable/ic_ambience_icon" -->
+        <!--app:drawableLeftCompat="@drawable/ic_ambience_icon" -->
 
 
     <ListView
-        android:id="@+id/listview_songs_edit"
-        android:listSelector="@drawable/list_item_selector"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
+        android:id="@+id/listview_songs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="250dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginLeft="60dp"
         android:choiceMode="singleChoice"
         android:drawSelectorOnTop="false"
         android:fadingEdge="horizontal"
@@ -56,20 +58,21 @@
 
     </ListView>
 
-    <Button
-        android:id="@+id/import_local_sound"
-        android:layout_width="110dp"
-        android:layout_height="32dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/ic_selected_sound"
-        android:text="Add to Library"
-        android:textAppearance="@style/Play_ambience"
-        android:textStyle="bold" />
 
 
-
+    <EditText
+        android:id="@+id/preset_title_edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="405dp"
+        android:layout_marginStart="80dp"
+        android:hint="Type in preset title of choice ..."
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textColorHint="#591B325F"
+        android:textColor="#000000"
+        android:backgroundTint="@color/colorPrimary"
+        />
 
     <View
         android:layout_width="300dp"
@@ -81,9 +84,43 @@
         android:isScrollContainer="true"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         android:scrollbarAlwaysDrawVerticalTrack="false"
-        android:scrollbarDefaultDelayBeforeFade="0"/>
+        android:scrollbarDefaultDelayBeforeFade="0"
+        android:scrollbars="none" />
+
+    <Button
+        android:id="@+id/cancel_button_library"
+        android:layout_width="75dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/ic_selected_sound"
+        android:text="Cancel"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
 
+    <Button
+        android:id="@+id/display_selected_button"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="500dp"
+        android:background="@xml/edit_play_rectangle"
+        android:text="Display Selected"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/add_as_preset_button"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="500dp"
+        android:background="@xml/edit_play_rectangle"
+        android:text="Add As Preset"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
 </FrameLayout>
