--- a/app/src/main/res/layout/fragment_preset.xml
+++ b/app/src/main/res/layout/fragment_preset.xml
@@ -65,6 +65,7 @@
                         android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
                         android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
                         android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
@@ -80,6 +81,7 @@
                         android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
                         android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
                         android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
@@ -95,92 +97,99 @@
                         android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
                         android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
                         android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/plus_button1"
+                        android:id="@+id/select_preset_button_4"
                         android:tag="add4"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="38dp"
                         android:layout_marginTop="30dp"
-                        android:background="@drawable/plus_selector"
+                        android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
-                        android:text=""
+                        android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
-                        android:textAppearance="@style/Play_ambience"
+                        android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/plus_button2"
+                        android:id="@+id/select_preset_button_5"
                         android:tag="add5"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="168dp"
                         android:layout_marginTop="-100dp"
-                        android:background="@drawable/plus_selector"
+                        android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
-                        android:text=""
+                        android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
-                        android:textAppearance="@style/Play_ambience"
+                        android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/plus_button3"
+                        android:id="@+id/select_preset_button_6"
                         android:tag="add6"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="298dp"
                         android:layout_marginTop="-100dp"
-                        android:background="@drawable/plus_selector"
+                        android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
-                        android:text=""
+                        android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
-                        android:textAppearance="@style/Play_ambience"
+                        android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/plus_button4"
+                        android:id="@+id/select_preset_button_7"
                         android:tag="add7"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="38dp"
                         android:layout_marginTop="30dp"
-                        android:background="@drawable/plus_selector"
+                        android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
-                        android:text=""
+                        android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
-                        android:textAppearance="@style/Play_ambience"
+                        android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/plus_button5"
+                        android:id="@+id/select_preset_button_8"
                         android:tag="add8"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="168dp"
                         android:layout_marginTop="-100dp"
-                        android:background="@drawable/plus_selector"
+                        android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
-                        android:text=""
+                        android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
-                        android:textAppearance="@style/Play_ambience"
+                        android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/plus_button6"
+                        android:id="@+id/select_preset_button_9"
                         android:tag="add9"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="298dp"
                         android:layout_marginTop="-100dp"
-                        android:background="@drawable/plus_selector"
+                        android:background="@drawable/preset_selector"
                         android:button="@android:color/transparent"
-                        android:text=""
+                        android:text="@string/add_new"
+                        android:textColor="@color/preset_text_color"
                         android:textAlignment="center"
-                        android:textAppearance="@style/Play_ambience"
+                        android:textAppearance="@style/sonority_by2"
                         android:textStyle="bold" />
 
                 </RadioGroup>
