--- a/app/src/main/res/layout/fragment_volume.xml
+++ b/app/src/main/res/layout/fragment_volume.xml
@@ -108,9 +108,9 @@
     <SeekBar
         android:id="@+id/volumebars1"
         android:layout_width="265dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="335dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="135dp"
         android:progress="30"
         android:progressBackgroundTint="@color/colorPrimary"
