--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:layout_marginLeft="25dp"
-        android:text="18sp"
+        android:textSize="16sp"
         android:textColor="#1B325F"
         android:textStyle="bold"
         android:id="@+id/song_name"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="20dp"
         android:button="@drawable/image_chechbox"
         android:id="@+id/checkbox"
 
