--- a/app/src/main/res/layout/fragment_library_2.xml
+++ b/app/src/main/res/layout/fragment_library_2.xml
@@ -9,16 +9,11 @@
     tools:context=".LibraryEditFragment">
 
     <TextView
-        android:layout_width="187dp"
-        android:layout_height="17dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="37dp"
+        android:layout_gravity="center_horizontal"
         android:fontFamily="sans-serif-medium"
-        android:gravity="center_horizontal|center_vertical"
         android:text="Sonority By Audientes"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
@@ -29,7 +24,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-medium"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:text="Sound Library"
         android:textAppearance="@style/home"
         android:textColor="#1B325F"
@@ -40,10 +35,13 @@
     <ListView
         android:id="@+id/listview_songs_edit"
         android:listSelector="@drawable/list_item_selector"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="80dp"
         android:choiceMode="singleChoice"
         android:drawSelectorOnTop="false"
         android:fadingEdge="horizontal"
@@ -57,11 +55,11 @@
     </ListView>
     <Button
         android:id="@+id/import_local_sound"
-        android:layout_width="110dp"
-        android:layout_height="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/ic_selected_sound"
         android:text="Add to Library"
         android:textAppearance="@style/Play_ambience"
@@ -73,9 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="180dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginBottom="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/listview_rectangle"
         android:fadeScrollbars="true"
         android:isScrollContainer="true"
