--- a/app/src/main/res/layout/fragment_edit_library.xml
+++ b/app/src/main/res/layout/fragment_edit_library.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="37dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Sonority By Audientes"
+        android:text="@string/sonority_by_audientes"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
@@ -24,47 +23,11 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Sound Library"
+        android:text="@string/library_text"
         android:textAppearance="@style/home"
         android:textColor="#1B325F"
         android:textStyle="bold" />
     <!--app:drawableLeftCompat="@drawable/ic_ambience_icon" -->
-
-
-    <ListView
-        android:id="@+id/listview_songs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="195dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="260dp"
-        android:choiceMode="singleChoice"
-        android:clickable="true"
-        android:drawSelectorOnTop="false"
-        android:fadingEdge="horizontal"
-        android:fadingEdgeLength="60dp"
-        android:fillViewport="false"
-        android:focusable="true"
-        android:requiresFadingEdge="vertical">
-        <!--- android:listSelector="@drawable/selector_list" -->
-
-    </ListView>
-
-
-    <EditText
-        android:id="@+id/preset_title_edittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="540dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:hint="Type in preset title of choice ..."
-        android:textColor="#000000"
-        android:textColorHint="#591B325F"
-        android:textSize="16dp"
-        android:textStyle="bold" />
 
     <View
         android:layout_width="wrap_content"
@@ -95,22 +58,53 @@
         android:textAppearance="@style/Play_ambience"
         android:textStyle="bold" />
 
+    <ListView
+        android:id="@+id/listview_songs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="195dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="260dp"
+        android:choiceMode="singleChoice"
+        android:clickable="true"
+        android:drawSelectorOnTop="false"
+        android:fadingEdge="horizontal"
+        android:fadingEdgeLength="60dp"
+        android:fillViewport="false"
+        android:focusable="true"
+        android:requiresFadingEdge="vertical" />
+    <!--- android:listSelector="@drawable/selector_list" -->
+
+    <EditText
+        android:id="@+id/preset_title_edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="550dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:hint="Type in preset title of choice"
+        android:textColor="#000000"
+        android:textColorHint="#591B325F"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="600dp">
+        android:layout_marginTop="600dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/display_selected_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Display Selected"
-            android:textAlignment="center"
             android:layout_marginRight="15dp"
             android:background="@drawable/custom_buttons"
+            android:text="Display Selected"
+            android:textAlignment="center"
             android:textAppearance="@style/Play_ambience"
             android:textStyle="bold" />
 
@@ -118,8 +112,8 @@
             android:id="@+id/add_as_preset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_buttons"
             android:layout_marginLeft="15dp"
+            android:background="@drawable/custom_buttons"
             android:text="Add As Preset"
             android:textAlignment="center"
             android:textAppearance="@style/Play_ambience"
